# email-triage-env

./: .gitignore  Dockerfile  README.md  baseline.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  readme.md  requirements.txt
server/: Dockerfile  __init__.py  app.py  environment.py
